# oss-repo-template

./: LICENSE
labs/lab-02/: lab2.md
labs/lab-03/: lab3.md
labs/lab-04/: lab4.md
labs/lab-05/: lab5  lab5.md
labs/lab-05/Block/: CMakeLists.txt  Makefile
labs/lab-05/Step1/: CMakeLists.txt
labs/lab-05/Step2/: tutorial.cxx
labs/lab-05/Step4/: output.txt
labs/lab-06/: lab6.md  plot_words_4.py  plot_words_no_ordering.py
